manifests/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: e2etests-status
  labels:
    tier: flask
spec:
  selector:
    app: e2etests
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: flask
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: e2etests
spec:
  rules:
  - host: status.kube-monitoring.K8S_INGRESS_ROOT_DOMAIN_NAME
    http:
      paths:
      - path: /
        backend:
          serviceName: e2etests-status
          servicePort: http
  tls:
  - hosts:
    - status.kube-monitoring.K8S_INGRESS_ROOT_DOMAIN_NAME
    secretName: status-ingress-cert
