manifests/e2etests.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-e2etests-deployment
  labels:
    appId: kube
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-e2etests-deployment-pvc
  labels:
    appId: kube
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-e2etests-deployment-update
  labels:
    appId: kube
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-e2etests-deployment-scale
  labels:
    appId: kube
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-e2etests-deployment-service
  labels:
    appId: kube
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-e2etests-service
  labels:
    appId: kube
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-e2etests-deployment-scale-service
  labels:
    appId: kube
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-e2etests-http
  labels:
    appId: kube
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-e2etests-http-update
  labels:
    appId: kube
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: e2etests
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
  replicas: 1
  template:
    metadata:
      labels:
        app: e2etests
    spec:
      volumes:
      - name: exporter-config
        configMap:
          name: statsd-exporter-map
      - name: statsd-config
        configMap:
          name: statsd-config
      containers:
      # OPTIONAL: if you don't want a frontend on this you can rip out this container.
      - name: flask
        command: ["python"]
        args: ["kubee2etests/scripts/flask_runner.py"]
        <<: &e2etests-image
          image: ocadotechnology/kube-e2etestapp:$Format:%H$
        ports:
        - name: flask
          containerPort: 8081
        readinessProbe:
          httpGet:
            path: /
            port: flask
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: flask
          initialDelaySeconds: 3
          periodSeconds: 3
        # OPTIONAL: if you don't want any metrics you can rip out this container.
      - name: statsd
        image: ocadotechnology/statsd:0.8.0-1
        ports:
        - name: statsd
          containerPort: 8125
        volumeMounts:
        - name: statsd-config
          mountPath: /statsd-config
      # OPTIONAL: if you don't need a statsd -> prometheus bridge you don't need this container.
      - name: statsd-exporter
        image: prom/statsd-exporter:0.3.0
        args:
        - "-statsd.add-suffix=false"
        - "-statsd.mapping-config=/exporter-config/mapping.conf"
        ports:
        - name: prometheus
          containerPort: 9102
        - name: statsd
          containerPort: 9125
        readinessProbe:
          httpGet:
            path: /metrics
            port: prometheus
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /metrics
            port: prometheus
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - name: exporter-config
          mountPath: /exporter-config
      # TODO: re-enable this test when weave npc is fixed
      # - name: namespace
      #   <<: *e2etests-image
      #   command: ["python"]
      #   args: ["kubee2etests/scripts/test_runner.py", "namespace"]
      #   env:
      #   - name: TEST_NAMESPACE
      #     value: kube-e2etests-namespace
      - name: deployment
        <<: *e2etests-image
        command: ["python"]
        args: ["kubee2etests/scripts/test_runner.py", "deployment"]
      - name: deployment-pvc
        <<: *e2etests-image
        command: ["python"]
        args: ["kubee2etests/scripts/test_runner.py", "deployment_pvc"]
      - name: deployment-update
        <<: *e2etests-image
        command: ["python"]
        args: ["kubee2etests/scripts/test_runner.py", "deployment_update"]
      - name: deployment-scale
        <<: *e2etests-image
        command: ["python"]
        args: ["kubee2etests/scripts/test_runner.py", "deployment_scale"]
      - name: service
        <<: *e2etests-image
        command: ["python"]
        args: ["kubee2etests/scripts/test_runner.py", "service"]
      - name: deployment-service
        <<: *e2etests-image
        command: ["python"]
        args: ["kubee2etests/scripts/test_runner.py", "deployment_service"]
      - name: deployment-scale-service
        <<: *e2etests-image
        command: ["python"]
        args: ["kubee2etests/scripts/test_runner.py", "deployment_scale_service"]
      - name: dns
        <<: *e2etests-image
        command: ["python"]
        args: ["kubee2etests/scripts/test_runner.py", "dns"]
      - name: http
        <<: *e2etests-image
        command: ["python"]
        args: ["kubee2etests/scripts/test_runner.py", "http"]
      - name: http-update
        <<: *e2etests-image
        command: ["python"]
        args: ["kubee2etests/scripts/test_runner.py", "http_update"]
      serviceAccountName: e2etests
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: e2etests
spec:
  podSelector:
    matchLabels:
      app: e2etests
  ingress:
  - ports:
    - port: 8081
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
          prometheus: k8s
    ports:
    - port: 9102
      protocol: TCP
